--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
-  "homepage": "https://diyafatimaexetom.github.io/website.github.io",
+  "homepage": "https://diyafatimaexetom.github.io/websitenew",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -33,8 +33,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-   
-    
   },
   "eslintConfig": {
     "extends": [
